<resources>
    <string name="app_name">Word Helper</string>
    <string name="text_placeholder" />
    <string name="text_instructions">Word letters, add a \'.\' for every unknown letter</string>
    <string name="excluded_letters_text_instructions">Excluded letters</string>
    <string name="hint_enter_whole_word_check">Enter a word to see if it exists in the dictionary</string>
    <string name="hint_pattern_input">Specify a Java Regular Expression</string>
    <string name="tab_item_puzzle_helper">Puzzle Helper</string>
    <string name="tab_item_word_checker">Checker</string>
    <string name="tab_item_word_finder">Finder</string>
    <string name="tab_item_pattern">Pattern</string>
    <string name="word_exists_message">%1$s exists!</string>
    <string name="word_does_not_exist_message">Could not find %1$s!</string>
    <string name="find_words_instructions">Enter letters to create words from</string>
    <string name="required_letters_exit_text_title">Additional required letters</string>
    <string name="results_found_text">%1$d results found</string>
    <string name="one_result_found_text">1 result found</string>
    <string name="no_result_found_text">No results found</string>
    <string name="allow_anagrams_switch_label">Anagrams&#160;&#160;</string>
    <string name="loading_text">Loading</string>


    <string name="menu_button_puzzle_helper"> Puzzle Helper</string>
    <string name="menu_button_word_finder"> Word Finder</string>
    <string name="menu_button_word_checker"> Word Checker</string>
    <string name="menu_button_regular_expressions"> Regular Expressions</string>
    <string name="menu_button_dictionaries"> Dictionaries</string>

    <string name="search_button_content_description">Search For Results</string>

    <string name="toast_copied_selected_word_to_clipboard">Copied selected word to clipboard</string>
    <string name="toast_copied_all_words_to_clipboard">Copied all words to clipboard</string>

    <string name="button_text_copy_word">Copy Word</string>
    <string name="button_text_copy_all_words">Copy All</string>
    <string name="button_find_word_on_website">Search on Dictionary.com</string>

    <string name="regex_guide_title">Regular Expressions</string>
</resources>