<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wordInputEditTextLayout"
        android:layout_marginHorizontal="@dimen/input_text_margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_instructions">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/wordInputEditText"
            android:maxLength="@integer/max_input_size"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/anagramsSwitchLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        tools:ignore="UselessParent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/allowAnagramsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="false"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/switch_padding_horizontal"
        android:paddingVertical="@dimen/switch_padding_vertical"
        android:text="@string/allow_anagrams_switch_label" />
    </LinearLayout>

    <TextView
        android:id="@+id/crosswordResultsCountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/results_count_padding_start"
        android:paddingEnd="@dimen/results_count_padding_end"
        android:layout_marginHorizontal="@dimen/results_count_horizontal_margin"
        android:text="" />

    <ListView
        android:id="@+id/crosswordHelperList"
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/wordInputEditTextLayout"
        />


    <TextView
        android:id="@+id/noCrosswordResultsFoundText"
        android:visibility="gone"
        android:isScrollContainer="false"
        android:textAlignment="center"
        android:textSize="@dimen/no_results_found_text_size"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_result_found_text"
        />

</LinearLayout>